<resources>
	<string name="main_indestructible_black_box">Blackbox</string>
	<string name="main_swift_diagnose">Once Click Check</string>
	<string name="main_advance_diagnose">Diagnostics</string>
	<string name="main_manager">Vehicle Manager</string>
	<string name="main_car_forum">My Club</string>
	<string name="main_more">More</string>
	<string name="main_track">Footprint</string>
	<string name="main_odb2">Gauges</string>
	<string name="main_more_device_manage">Settings</string>
	<string name="main_more_about">About</string>
	<string name="main_more_help">help</string>
	<string name="call">Call</string>
	<string name="custom_title_left">Left Title</string>
	<string name="custom_title_right">Right Title</string>
	<string name="app_name">DBScar</string>
	<string name="usercenter">User</string>
	<string name="device">Device</string>
	<string name="cccenter">CC</string>
	<string name="main_gasoline_analysis">Fuel Analysis</string>
	<string name="main_more_oil_record">Fuel</string>
	<string name="main_car_rescue">Assistance</string>
	<string name="updatecenter">Update</string>
	<string name="carrescue">Assist</string>
	<string name="user_center">User Info</string>
	<string name="vinsearch">VIN</string>
	<string name="carforum">Club</string>
	<string name="manager">Vehicle Manager</string>
	<string name="diagnose">Diagnostics</string>
	<string name="maintainreference">Troubleshooters</string>
	<string name="myCarSetting">Settings</string>
	<string name="gettting_data">Loading...</string>
	<string name="ex_userinfo">Profile</string>
	<string name="weather">Weather</string>
	<string name="tour_number">Travel Index:</string>
	<string name="car_wash_number">Car Wash Index</string>
	<string name="love_car_diagnosis">Diagnostics</string>
	<string name="default_city_name">Shen Zhen</string>
	<string name="default_dtc_content">No problem were found, your car is in the good condition.</string>
	<string name="dtc_have_fault">Some problems were found, please check the report.</string>
	<string name="default_login_state">Not Logged in</string>
	<string name="user_info_detail">Detail</string>
	<string name="setting_titile">Settings</string>
	<string name="usercenter_login_notice">Click on "Register" to register, or Click on "Forget" to retrieve your password, or Click on "Later" </string>
	<string name="usercenter_register_notice">Congratulations you have successfully registered with Launch DBScar service. Please write down your CC number, and confirm the following information.</string>
	<string name="usercenter_cc_mobile_email">By username/cc</string>
	<string name="usercenter_dbscar_login">Login</string>
	<string name="usercenter_login">Login</string>
	<string name="usercenter_register_presentation_1">Welcome to DBScar.com. Please make sure your could access internet and fill out the registration form. * are required.</string>
	<string name="usercenter_register_presentation_2">I agree to the terms of usage and privacy statement</string>
	<string name="usercenter_pwd">Password:</string>
	<string name="usercenter_password">Password: ******</string>
	<string name="usercenter_cc">CC:</string>
	<string name="usercenter_cc_">CC</string>
	<string name="usercenter_username">Username:</string>
	<string name="usercenter_username_">Username</string>
	<string name="usercenter_nickname">Nickname:</string>
	<string name="usercenter_nickname_">Nickname</string>
	<string name="usercenter_mobile">Cellphone:</string>
	<string name="usercenter_mobile_">Cellphone</string>
	<string name="usercenter_email">Email:</string>
	<string name="usercenter_email_">Email</string>
	<string name="usercenter_activate">Activate</string>
	<string name="usercenter_bind"></string>
	<string name="usercenter_not">Unread</string>
	<string name="usercenter_done">Read</string>
	<string name="usercenter_account">   Profile:</string>
	<string name="usercenter_device_info">Device Info</string>
	<string name="usercenter_re_password">Confirm:</string>
	<string name="usercenter_input_orgpwd">Current</string>
	<string name="usercenter_input_newpwd">New</string>
	<string name="usercenter_input_newpwd_again">Confirm</string>
	<string name="usercenter_dbscar_register">Register</string>
	<string name="usercenter_register">Register</string>
	<string name="usercenter_forget_pwd">Forget password</string>
	<string name="usercenter_auto_login">Auto login </string>
	<string name="usercenter_save_pwd">Save password</string>
	<string name="usercenter_hint_password">By password</string>
	<string name="usercenter_change_pwd">Change password</string>
	<string name="usercenter_change_pwd_submit">Submit</string>
	<string name="usercenter_change_pwd_cancel">Cancel</string>
	<string name="usercenter_userinfo">Profile</string>
	<string name="usercenter_update">Refresh</string>
	<string name="usercenter_logout">Logout</string>
	<string name="usercenter_back">Main</string>
	<string name="usercenter_password_manage">Password</string>
	<string name="usercenter_device_name">Devices:</string>
	<string name="usercenter_device_serial">SN:</string>
	<string name="usercenter_message_no_defined">Undefined message</string>
	<string name="usercenter_usercenter_exception">Change password exception occured</string>
	<string name="usercenter_connect_service_timeout">Network timeout</string>
	<string name="usercenter_account_is_not_null">Invalid username</string>
	<string name="usercenter_illegal_account">Error: Username is not in a valid format.</string>
	<string name="usercenter_plese_choice">Select</string>
	<string name="usercenter_password_tip_question">Security Questions</string>
	<string name="usercenter_retrieve_password_success">An email has been sent to the address you supplied, please read the instructions in the email.\n</string>
	<string name="usercenter_service_io_exceptin">I/O exception occured</string>
	<string name="usercenter_service_parse_xml_exception">Decoding exception occurred</string>
	<string name="usercenter_service_exception">Synchronization exception occurred</string>
	<string name="usercenter_login_exception">Login Exception</string>
	<string name="usercenter_service_login_timeout">Login Timeout</string>
	<string name="usercenter_netword_not_connect">Network is unreseachable, please check your network.</string>
	<string name="usercenter_fail_to_register">Error: Failed to register, please check the network.</string>
	<string name="usercenter_registing">Loading...</string>
	<string name="usercenter_logining">Loading...</string>
	<string name="rescue_vehicle_ensure_call">Confirm</string>
	<string name="rescue_vehicle_add_emergency_phone">Add</string>
	<string name="rescue_vehicle_update_emergency_phone">Change</string>
	<string name="rescue_vehicle_ilegal_mobile">Invalid phone number</string>
	<string name="rescue_vehicle_use_gps_location">Locating...</string>
	<string name="rescue_vehicle_gps_can_get_location">Location update failed: please try GPRS location service.</string>
	<string name="rescue_vehicle_gps_location">Locate me</string>
	<string name="rescue_vehicle_searching_around_store">Searching...</string>
	<string name="rescue_vehicle_network_locationing">Locating...</string>
	<string name="rescue_vehicle_current_location_lat">Your current location: latitude：</string>
	<string name="rescue_vehicle_current_location_lng">, longitude：</string>
	<string name="rescue_vehicle_is_search_around_store">\n Click on "Confirm" to locate the shop nearby.</string>
	<string name="rescue_vehicle_fail_network_location">Location update failed: GPRS Network Timeout!</string>
	<string name="rescue_vehicle_fail_gps_location">Location update failed: GPS Timeout</string>
	<string name="rescue_vehicle_store">Shop:</string>
	<string name="rescue_vehicle_create_date">Start Time:</string>
	<string name="main_agree">Agree</string>
	<string name="main_not_agree">Disagree</string>
	<string name="skip">Skip</string>
	<string name="legal_terms1">Diclaimer</string>
	<string name="legal_terms2">1、	Before using this product, please read the "DBScar manual".\n
2、	Of this product in the process of driving a car, please do not operate so as not to distract the event of a traffic hazard; the Company does not undertake any responsibility for the traffic accident occurred in the process of using this product or other economic loss.\n
3、	This product is Bluetooth communication between the vehicle\'s data acquisition and transmission, please try not to use this product in strong electromagnetic interference (such as to ensure normal transmission: the periphery of the high-voltage transmission and distribution equipment).\n
4、	Any direct or indirect damage caused by unauthorized modification or installation of various equipment or components, the Company does not undertake any responsibility.\n
5、	Maintenance must be carried out by the professional and technical personnel of the Company, the Company is obliged in the repair process according to the actual situation, to decide whether to repair or replace maintenance in use of any product-related problems.\n
6、	This software is a company developed by Yuan Zheng. "Software" all copyright and other intellectual property rights, and "software" all of the information content, including but not limited to: the textual representation, and combinations thereof, icons, illustrations, charts, color, interface design, layout framework, the data printed materials, or electronic document is protected by copyright law and international copyright treaties, as well as other intellectual property laws and regulations to protect.\n
7、	User may not reverse engineer (reverse engineer) the software products, reverse compile (decompile) or disassemble (disassemble) offenders belong infringement, and to bear the adverse consequences arising therefrom.\n
8、	"Software" related to the Internet and mobile communications services, may be affected by the impact of all aspects of instability, due to force majeure, computer viruses, hacker attacks, system instability, user\'s location, user shutdown as well as any other network technology, communication lines, etc. causes service interruption or can not meet the risk of user requirements, users need to understand and to bear more risk, and the user therefore can not send or receive to read the messages, or access, send the wrong message, the Company does not undertake any responsibility.\n
9、	The economic losses suffered by third parties such as the telecommunications sector, communication line failure, technical problems, network, computer failure, system instability and other kinds of force majeure reasons, the Company is not liable.\n
10、	Due to technical failure and not the normal operation of the anti-events to the service, the company promises and related units in the first time with the timely processing of repair, but the economic losses suffered by the user, the Company is not liable.\n
11、	In view of the differences and complexity of the user\'s hardware environment, the function provided by the Company does not guarantee in any case can implement to achieve the desired results by the user. Users use this software all the consequences arising from the software author does not assume any responsibility.\n
12、	Shall not use the "software".Transmit,disseminate,store the content in violation of state law, endangering national security, reunification of the motherland, social stability, or any inappropriate, insulting libel, obscenity, violence, and any violation of state laws and regulations, policiescontents.\n
13、	If the user installed the software that the user confidence in the company, voluntarily choose to install this software, and accept all the terms of this Agreement.
    </string>
	<string name="uc_confirm">Okay</string>
	<string name="usercenter_ask_device_notice">Please activate your DBScar connector.</string>
	<string name="uc_immediately_activate">Activate</string>
	<string name="uc_ex_userinfo">Profile</string>
</resources>