<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:spinnerview="http://schemas.android.com/apk/res/com.cnlaunch.mycar"
	android:id = "@+id/usercenter_root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    >
    <LinearLayout
    	android:orientation = "vertical"
    	android:id = "@+id/usercenter_linelayout01"
    	android:gravity="center_horizontal"
    	android:layout_width= "fill_parent"
		android:layout_marginTop="5dp"
    	android:layout_height="wrap_content">
		<TextView 
			android:id="@+id/usercenter_tv_login_notice" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:paddingLeft="17px"
			android:paddingRight="17px"
			android:textColor="@color/main_description"
			android:textSize="@dimen/main_textsize"
			android:text="@string/usercenter_login_notice"
			/>
    </LinearLayout>
    <RelativeLayout android:id="@+id/userceneter_login_relativelayout1"
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent"
    	android:layout_marginTop="20dp">
    	    <TextView 
				android:id="@+id/usercenter_tv_account"
				android:textSize="20.0dip" 
				android:textColor="#535353"
				android:gravity="center_vertical" 
				android:layout_marginLeft="20dp"	
				android:layout_marginTop="10dp"			
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:text="@string/usercenter_account" 
				/>
    	    <EditText 
				android:id="@+id/usercenter_et_account"
				android:background="@drawable/main_edit" 
				android:saveEnabled="true" 
				android:layout_width="@dimen/usercenter_login_edit_width"
				android:layout_height="wrap_content" 
				android:paddingRight="40dp"
				android:maxLength="30" 
				android:hint="@string/usercenter_cc_mobile_email"
				android:inputType="text" 
				android:layout_alignParentRight="true"
				android:layout_marginRight="15dp"
				/>
            <com.cnlaunch.mycar.common.ui.SpinnerView
			    android:id="@+id/lesson_alldata"
				android:background="@drawable/usercenter_button2_over" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:layout_marginRight="1.0dip"
				android:layout_alignTop="@+id/usercenter_et_account"
				android:layout_alignRight="@+id/usercenter_et_account"
				android:layout_alignBottom="@+id/usercenter_et_account" 
				spinnerview:textWidth="30" 
				spinnerview:lesson_spinner_first="@drawable/spinnerview_lesson_spinner_first"
				spinnerview:lesson_spinner_center="@drawable/spinnerview_lesson_spinner_thrid"
				spinnerview:lesson_spinner_end="@drawable/spinnerview_lesson_spinner_fourth"
				/>
            <EditText 
				android:id="@+id/usercenter_et_pwd"
				android:background="@drawable/main_edit" 
				android:saveEnabled="true" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:maxLength="16" 
				android:layout_marginTop="5dp"
				android:hint="@string/usercenter_hint_password"
				android:layout_below="@id/usercenter_et_account"
				android:layout_alignLeft="@id/usercenter_et_account"
				android:layout_alignRight="@id/usercenter_et_account"
				android:inputType="textPassword" 
				/>
			<TextView 
				android:id="@+id/usercenter_tv_pwd"
				android:textSize="20dip" 
				android:textColor="#535353"
				android:gravity="center_vertical" 
				android:paddingLeft="7.0sp" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:text="@string/usercenter_pwd"
				android:layout_alignTop="@id/usercenter_et_pwd"
				android:layout_alignRight="@id/usercenter_tv_account"
				android:layout_alignBottom="@id/usercenter_et_pwd" 
				/>
    </RelativeLayout>
    <TableLayout
    		android:id="@+id/usercenter_tablelayout01"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:layout_marginLeft="20dp" 
			android:layout_marginRight="15.0dp"
			android:stretchColumns="1"
    		>
    		<TableRow>
				<CheckBox 
					android:id="@+id/usercenter_cb_save_pwd"
					android:textColor="@color/main_black" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:text="@string/usercenter_save_pwd" 
					style="@style/MyCarCheckBox" 
					/>
				<CheckBox 
					android:id="@+id/usercenter_cb_auto_login"
					android:textColor="@color/main_black" 
					android:layout_gravity="right" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:text="@string/usercenter_auto_login" 
					style="@style/MyCarCheckBox" 
					/>
			</TableRow>
    	</TableLayout>
    	<LinearLayout
	    	android:orientation = "vertical"
	    	android:id = "@+id/usercenter_linelayout02"
	    	android:gravity="center_horizontal"
	    	android:layout_width= "fill_parent"
			android:layout_marginTop="@dimen/usercenter_login_margin_top"
	    	android:layout_height="wrap_content">
			<Button 
				android:id="@+id/usercenter_btn_login" 
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textColor="@color/white"
				android:textSize="@dimen/manager_main_button_text_size"
				android:text="@string/usercenter_login"
				android:background="@drawable/main_button"
				android:layout_margin="3dip"
				/>
         </LinearLayout>
    	<RelativeLayout
    		android:id="@+id/usercenter_relativelayout02"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:gravity="center_horizontal" >
    		<LinearLayout
    			android:id="@+id/usercenter_linelayout03"
    			android:layout_width="fill_parent"
    			android:layout_height="wrap_content"
    			android:layout_alignParentBottom="true"
    			android:layout_marginBottom="10dp"
    			android:gravity="center_horizontal"
    			android:orientation="horizontal" >
    			<Button
    				android:id="@+id/usercenter_btn_skip"
    				android:layout_width="@dimen/usercenter_login_button_width_small"
    				android:layout_height="@dimen/usercenter_login_button_height"
    				android:text="@string/skip"				
    				android:textColor="@color/main_black"
			   		android:background="@drawable/main_button_gray" />
    			<Button
    				android:id="@+id/usercenter_btn_forget_pwd"
 				    android:layout_width="@dimen/usercenter_login_button_width_big"
    				android:layout_height="@dimen/usercenter_login_button_height"			
    				android:text="@string/usercenter_forget_pwd"
    				android:textColor="@color/main_black"
			    	android:background="@drawable/main_button_gray" />
    			<Button
    				android:id="@+id/usercenter_btn_register"
 				    android:layout_width="@dimen/usercenter_login_button_width_small"
    				android:layout_height="@dimen/usercenter_login_button_height"
    				android:text="@string/usercenter_register"
    				android:textColor="@color/main_black"
			    	android:background="@drawable/main_button_gray" 
			    	/>
    		</LinearLayout>
    	</RelativeLayout>
    </LinearLayout>