<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent" 
   android:layout_height="fill_parent">
<LinearLayout
    android:id="@+id/main_legal_terms_liner"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
      <LinearLayout 
           android:id="@+id/mybottom_linear1"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:orientation="vertical">
	    <TextView 
	        android:id="@+id/tv_legal_terms1"
	        android:layout_marginTop="15dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:textSize="@dimen/main_button_textsize_big"
	        android:textColor="#3E85CE"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/legal_terms1"
	       ></TextView>
	    <TextView 
	        android:id="@+id/tv_legal_terms2"
	        android:textColor="#535353"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_width="wrap_content"
	        android:textSize="@dimen/main_textsize"
	        android:layout_height="wrap_content"
	        android:text="@string/legal_terms2"
	       ></TextView>	    
	      </LinearLayout>
    <!-- 以下是底部按钮 -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="10dip"
            android:orientation="horizontal" >
		<Button
			android:id="@+id/btn_not_agree"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/main_not_agree"
			android:background="@drawable/main_button"
			android:textColor="@color/white"
			android:textSize="14dip"
			></Button>
		<Button
			android:id="@+id/btn_agree"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/white"
			android:textSize="14dip"
			android:text="@string/main_agree"
			android:background="@drawable/main_button"
			android:layout_marginLeft="47dip"
			></Button>
        </LinearLayout>
</LinearLayout>
</ScrollView>